# django-ckeditor-skins

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: automated-checks.yml
ckeditor_skins/: __init__.py
